--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@geist-ui/style": "^2.0.0",
     "@octokit/rest": "^19.0.5",
     "lodash.uniqby": "^4.7.0",
     "next": "12.3.1",
