--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@geist-ui/style": "^2.0.0",
     "@octokit/rest": "^19.0.5",
+    "@vercel/analytics": "^0.1.6",
     "lodash.uniqby": "^4.7.0",
     "next": "12.3.1",
     "react": "18.2.0",
