--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "lodash.uniqby": "^4.7.0",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-codecopy": "^5.0.1",
+    "react-dom": "18.2.0",
+    "styled-components": "5"
   },
   "devDependencies": {
     "@types/lodash.uniqby": "^4.7.7",
